[gd_scene load_steps=12 format=2]

[ext_resource path="res://World/invisibleWall.gd" type="Script" id=1]
[ext_resource path="res://World/ice wall.png" type="Texture" id=2]
[ext_resource path="res://Overlap/Hurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://UI/levelbar/barHorizontal_red_mid 200.png" type="Texture" id=6]
[ext_resource path="res://UI/levelbar/barHorizontal_green_mid 200.png" type="Texture" id=7]

[sub_resource type="SpriteFrames" id=55]
animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=54]
extents = Vector2( 81, 10 )

[sub_resource type="RectangleShape2D" id=53]
extents = Vector2( 81, 12 )

[sub_resource type="RectangleShape2D" id=56]
extents = Vector2( 81, 12 )

[sub_resource type="DynamicFont" id=57]
size = 11
font_data = ExtResource( 4 )

[node name="invisibleWall" type="StaticBody2D" groups=["Wall"]]
position = Vector2( 72, -304 )
collision_mask = 18
script = ExtResource( 1 )

[node name="Wall" type="Node2D" parent="."]
position = Vector2( -72, 8 )

[node name="wall2" type="Sprite" parent="Wall"]
position = Vector2( 136, -16 )
scale = Vector2( 0.675595, 0.541667 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 16, 16, 224, 96 )

[node name="wall" type="Sprite" parent="Wall"]
position = Vector2( 160, -16 )
scale = Vector2( 0.639881, 0.541667 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 16, 16, 224, 96 )

[node name="MainWall" type="Node2D" parent="."]
visible = false

[node name="AnimatedSprite" type="AnimatedSprite" parent="MainWall"]
position = Vector2( 10.0625, -10.125 )
scale = Vector2( 0.471457, 0.474206 )
frames = SubResource( 55 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="MainWall"]
position = Vector2( 80, -8 )
scale = Vector2( 0.471457, 0.474206 )
frames = SubResource( 55 )

[node name="AnimatedSprite6" type="AnimatedSprite" parent="MainWall"]
position = Vector2( 136, -8 )
scale = Vector2( 0.471457, 0.474206 )
frames = SubResource( 55 )

[node name="AnimatedSprite3" type="AnimatedSprite" parent="MainWall"]
position = Vector2( 104, -8 )
scale = Vector2( 0.471457, 0.474206 )
frames = SubResource( 55 )

[node name="AnimatedSprite4" type="AnimatedSprite" parent="MainWall"]
position = Vector2( 10.0625, -10.125 )
scale = Vector2( 0.471457, 0.474206 )
frames = SubResource( 55 )

[node name="AnimatedSprite5" type="AnimatedSprite" parent="MainWall"]
position = Vector2( 40, -8 )
scale = Vector2( 0.471457, 0.474206 )
frames = SubResource( 55 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 71, 0 )
shape = SubResource( 54 )

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D2" type="CollisionShape2D" parent="PlayerDetector"]
visible = false
position = Vector2( 71, -4 )
shape = SubResource( 53 )

[node name="Hurtbox" parent="." instance=ExtResource( 3 )]
collision_layer = 8

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
visible = false
position = Vector2( 71, -4 )
shape = SubResource( 56 )

[node name="note" type="Node2D" parent="."]
position = Vector2( 0, -8 )

[node name="ColorRect" type="ColorRect" parent="note"]
modulate = Color( 1, 1, 1, 0.215686 )
margin_left = -48.0
margin_top = -48.0
margin_right = 184.0
margin_bottom = 16.0
color = Color( 0, 0, 0, 1 )

[node name="Label" type="Label" parent="note"]
margin_left = -48.0
margin_top = -40.0
margin_right = 200.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 57 )
text = "You are not strong enough! (Press Tab to find another way.)"
align = 1
autowrap = true

[node name="MessageTimer" type="Timer" parent="."]

[node name="wallBar" type="TextureProgress" parent="."]
visible = false
margin_left = 24.0
margin_top = -56.0
margin_right = 224.0
margin_bottom = -30.0
rect_scale = Vector2( 0.5, 0.5 )
value = 100.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 7 )

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="area_entered" from="Hurtbox" to="." method="_on_Hurtbox_area_entered"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]

[editable path="Hurtbox"]
